# hex-terapia-visual

./: .gitignore  README.md  help.html  index.html  settings.html  src-files.js
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: mejoras.md  repomix-output.xml  requirements.md  tech-stack.md
docs/manual/: user-manual.md
search.index/: 00007c6a82.js  00935379fe.js  012d7772b4.js  01b5355981.js  0201f4df27.js  02ff1fbfbb.js  03122da854.js  036a4706e9.js  03703bf079.js  039b2cd220.js  0474c9eec2.js  06254f082b.js  0792cb23cf.js  0b7b64bd09.js  0b8b63a530.js  0ba582fa40.js  0bc8dd2796.js  0ca17b9fb8.js  0cb853ecc0.js  0d4545a0b1.js  0dae52fe86.js  0dbe531a59.js  0f712b5607.js  0fabae864b.js  100abce80e.js  119f370108.js  12094e410b.js  1234c0756c.js  129b30db4a.js  12b611c091.js  12e67d8025.js  13305dafd6.js  135aaf1ffe.js  149cf2f6eb.js  15dbf1c5b6.js  15ee911989.js  165ceb4a24.js  166d221b6b.js  1703634ed5.js  174324e164.js  (+199 more)
search.index/desc/: 8fa67c76c6.js  b6ccb378cb.js  e56e0390ea.js
search.index/entry/: 0844669d14.js  38f0316e57.js  5a959373d1.js  6b55829ac4.js  9069039518.js  f1cb83aa03.js
search.index/function/: 08f6f3f2ea.js  2aca33b6bf.js  460d678db2.js  52979abb4f.js  6ba5404122.js  a2089c4639.js  b6a6d9cf81.js  d8ad77c07f.js
search.index/generic_inverted_index/: 8afdbbf1a9.js  981b95970f.js  98fc7a0a69.js  9bc86525e8.js  bb770256bd.js  c00078091d.js
search.index/name/: 0bc8f845f8.js  2dfd7f729c.js  69e0d43dfd.js  a8076a5375.js  f352843b38.js  f75cc29963.js
search.index/normalizedName/: 021b73efdd.js  3d337d0f4a.js  3dfa324926.js  514638bf4a.js  (+2 more)
terapia-visual/: Cargo.toml  lcov.info  repomix-output.xml
terapia-visual/terapia_visual_adapter/: Cargo.toml
terapia-visual/terapia_visual_adapter/src/: lib.rs  messages.rs
terapia-visual/terapia_visual_adapter/src/config_storage/: mod.rs  toml_app_config_storage.rs  toml_config_storage.rs  toml_storage.rs  toml_therapy_config_storage.rs
terapia-visual/terapia_visual_adapter/src/notifier/: mod.rs  tauri_notifier.rs
terapia-visual/terapia_visual_adapter/src/overlay/: mod.rs  tauri_overlay.rs  windows_overlay.rs
terapia-visual/terapia_visual_adapter/src/reading_window/: mod.rs  tauri_reading_window.rs
terapia-visual/terapia_visual_app/src-tauri/: Cargo.toml  overlay.html  tauri.conf.json
terapia-visual/terapia_visual_app/src-tauri/capabilities/: default.json
terapia-visual/terapia_visual_app/src-tauri/icons/: icon.icns
terapia-visual/terapia_visual_app/src-tauri/src/: commands.rs  lib.rs  main.rs  setup.rs  state.rs  tray.rs
terapia-visual/terapia_visual_app/src-tauri/src/commands/: mod.rs  overlay.rs  reading.rs  settings.rs
terapia_visual_adapter/: all.html  index.html  sidebar-items.js
terapia_visual_app/: all.html  fn.main.html  index.html
terapia_visual_app_lib/: all.html  fn.run.html  index.html  sidebar-items.js
terapia_visual_domain/: all.html  index.html
(+480 files in other folders)
