[package]
name = "terapia_visual_adapter"
version = "1.1.1"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
once_cell = "1.21.4"
serde = "1.0.228"
tauri = {version = "2.0.0", features = ["tray-icon", "image-png"]}
tauri-plugin-global-shortcut = "2.3.1"
tauri-plugin-shell = "2.3.5"
tempfile = "3.27.0"
terapia_visual_domain = { version = "1.1.1", path = "../terapia_visual_domain" }
tokio = { version = "1.51.1", features = ["full"] }
toml = "1.1.2"
tracing = {version = "0.1.44", features = ["log"]}
tracing-subscriber = "0.3.23"
# windows = { version = "0.52", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_Graphics_Gdi", "Win32_System_LibraryLoader", "Win32_UI_Controls",] }
tauri-plugin-notification = "2.0.0"
urlencoding = "2.1.3"
url = "2.5.8"
