[package]
name = "terapia_visual_app"
version = "1.1.0"
description = "App de terapia visual"
authors = ["Juan Jose Restrepo"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "terapia_visual_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = []
devtools = ["tauri/devtools"]

[dependencies]
# Locales
terapia_visual_domain = { version = "1.1.0", path = "../../terapia_visual_domain" }
terapia_visual_adapter = { version = "1.1.0", path = "../../terapia_visual_adapter" }

tauri = { version = "2", features = ["tray-icon", "webview-data-url", "image-png"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-shell = "2.3.5"
tauri-plugin-global-shortcut = "2.3.1"
tauri-plugin-notification = "2.0.0"
tokio = { version = "1.52.1", features = ["full"] }
tauri-plugin-log = "2.8.0"
tracing = {version = "0.1.44", features = ["log"] }
tauri-plugin-single-instance = "2.4.2"
tracing-subscriber = "0.3.23"

